--- a/output.css
+++ b/output.css
@@ -617,6 +617,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
 .mt-\[10px\] {
   margin-top: 10px;
 }
@@ -629,16 +633,84 @@ video {
   margin-top: 60px;
 }
 
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
+.ml-\[120px\] {
+  margin-left: 120px;
+}
+
+.ml-\[80px\] {
+  margin-left: 80px;
+}
+
+.ml-\[10px\] {
+  margin-left: 10px;
+}
+
+.ml-\[15px\] {
+  margin-left: 15px;
+}
+
+.ml-\[20px\] {
+  margin-left: 20px;
+}
+
+.ml-\[25px\] {
+  margin-left: 25px;
+}
+
+.ml-\[100px\] {
+  margin-left: 100px;
+}
+
+.ml-\[150px\] {
+  margin-left: 150px;
+}
+
+.ml-\[200px\] {
+  margin-left: 200px;
+}
+
+.ml-\[190px\] {
+  margin-left: 190px;
+}
+
+.ml-\[210px\] {
+  margin-left: 210px;
+}
+
+.ml-\[215px\] {
+  margin-left: 215px;
+}
+
+.box-content {
+  box-sizing: content-box;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
 
-.h-\[60px\] {
-  height: 60px;
+.h-\[100\%\] {
+  height: 100%;
 }
 
-.h-\[700px\] {
-  height: 700px;
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[60px\] {
+  height: 60px;
 }
 
 .h-\[70px\] {
@@ -649,12 +721,20 @@ video {
   height: 100vh;
 }
 
-.w-\[130px\] {
-  width: 130px;
+.h-\[10px\] {
+  height: 10px;
 }
 
-.w-\[180px\] {
-  width: 180px;
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[30px\] {
+  height: 30px;
 }
 
 .w-\[25\%\] {
@@ -669,8 +749,16 @@ video {
   width: 90px;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .max-w-\[1320px\] {
   max-width: 1320px;
+}
+
+.basis-\[35\%\] {
+  flex-basis: 35%;
 }
 
 .basis-\[40\%\] {
@@ -681,6 +769,36 @@ video {
   flex-basis: 60%;
 }
 
+.basis-\[65\%\] {
+  flex-basis: 65%;
+}
+
+@keyframes wiggle {
+  0% {
+    transform: translateY(0%);
+  }
+
+  25% {
+    transform: translateY(-100%);
+  }
+
+  50% {
+    transform: translateY(-200%);
+  }
+
+  75% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+.animate-\[wiggle_7s_ease-in-out_infinite\] {
+  animation: wiggle 7s ease-in-out infinite;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -689,8 +807,32 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
+.items-center {
+  align-items: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
 }
 
 .overflow-hidden {
@@ -713,19 +855,14 @@ video {
   border-width: 1px;
 }
 
-.border-\[\#130F49\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(19 15 73 / var(--tw-border-opacity));
-}
-
-.border-\[\#A5A6FF\] {
+.border-light_purple {
   --tw-border-opacity: 1;
   border-color: rgb(165 166 255 / var(--tw-border-opacity));
 }
 
-.bg-\[\#130F49\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 15 73 / var(--tw-bg-opacity));
+.border-dark_blue {
+  --tw-border-opacity: 1;
+  border-color: rgb(19 15 73 / var(--tw-border-opacity));
 }
 
 .bg-\[\#EFFBF8\] {
@@ -743,13 +880,40 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-backGround_color {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 251 248 / var(--tw-bg-opacity));
+}
+
+.bg-dark_blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 15 73 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.decoration-slice {
+  -webkit-box-decoration-break: slice;
+          box-decoration-break: slice;
+}
+
 .p-\[7px\] {
   padding: 7px;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.pl-\[10px\] {
+  padding-left: 10px;
 }
 
 .text-center {
@@ -768,16 +932,16 @@ video {
   font-family: Karla, sans-serif;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .text-\[15px\] {
   font-size: 15px;
 }
 
 .text-\[16px\] {
   font-size: 16px;
-}
-
-.text-\[18px\] {
-  font-size: 18px;
 }
 
 .text-\[20px\] {
@@ -792,6 +956,10 @@ video {
   font-size: 60px;
 }
 
+.text-\[30px\] {
+  font-size: 30px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -804,23 +972,17 @@ video {
   font-weight: 600;
 }
 
-.leading-\[70px\] {
-  line-height: 70px;
+.uppercase {
+  text-transform: uppercase;
 }
 
-.text-\[\#130F49\] {
-  --tw-text-opacity: 1;
-  color: rgb(19 15 73 / var(--tw-text-opacity));
+.leading-\[55px\] {
+  line-height: 55px;
 }
 
 .text-\[\#55527C\] {
   --tw-text-opacity: 1;
   color: rgb(85 82 124 / var(--tw-text-opacity));
-}
-
-.text-\[\#A5A6FF\] {
-  --tw-text-opacity: 1;
-  color: rgb(165 166 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#A5ABFE\] {
@@ -833,19 +995,38 @@ video {
   color: rgb(194 200 204 / var(--tw-text-opacity));
 }
 
-.text-\[\#a5a6ff\] {
+.text-dark_blue {
+  --tw-text-opacity: 1;
+  color: rgb(19 15 73 / var(--tw-text-opacity));
+}
+
+.text-light_purple {
   --tw-text-opacity: 1;
   color: rgb(165 166 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#b1b6b9\] {
+.text-textColor {
   --tw-text-opacity: 1;
-  color: rgb(177 182 185 / var(--tw-text-opacity));
+  color: rgb(85 82 124 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#130F49\] {
+  --tw-text-opacity: 1;
+  color: rgb(19 15 73 / var(--tw-text-opacity));
+}
+
+.text-hoverColor {
+  --tw-text-opacity: 1;
+  color: rgb(255 151 45 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .duration-500 {
@@ -856,108 +1037,12 @@ video {
   transition-duration: .5s;
 }
 
-.off-screen-menu {
-  background-color: #fff;
-  height: 100vh;
-  width: 30%;
-  max-width: 450px;
-  position: fixed;
-  top: 10px;
-  right: -450px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 3rem;
-  transition: 0.3s ease;
+.duration-\[\.4s\] {
+  transition-duration: .4s;
 }
 
-.off-screen-menu.active {
-  right: 0;
-}
-
-nav {
-  display: flex;
-  background-color: #fff;
-}
-
-.ham-menu {
-  height: 50px;
-  width: 50px;
-  margin-left: auto;
-  position: relative;
-  top: -30px;
-}
-
-@media (max-width: 1024px) {
-  .ham-menu {
-    height: 30px;
-    width: 30px;
-    top: -20px;
-  }
-}
-
-.ham-menu span {
-  height: 5px;
-  width: 100%;
-  background-color: black;
-  border-radius: 25px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: 0.3s ease;
-}
-
-.ham-menu span:nth-child(1) {
-  top: 25%;
-}
-
-.ham-menu span:nth-child(3) {
-  top: 75%;
-}
-
-.ham-menu.active span:nth-child(1) {
-  top: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.ham-menu.active span:nth-child(2) {
-  opacity: 0;
-}
-
-.ham-menu.active span:nth-child(3) {
-  top: 50%;
-  transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-#info {
-  position: relative;
-}
-
-#info ul::before {
-  position: absolute;
-  content: "";
-  width: 4px;
-  background-color: #ff972d;
-  top: 0px;
-  bottom: 0px;
-}
-
-.main-section {
-  margin-left: 322px;
-}
-
-@media (max-width: 1024px) {
-  .main-section {
-    margin-left: 0;
-  }
-}
-
-.hover\:bg-\[\#130F49\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 15 73 / var(--tw-bg-opacity));
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .hover\:bg-\[\#EFFBF8\]:hover {
@@ -965,9 +1050,14 @@ nav {
   background-color: rgb(239 251 248 / var(--tw-bg-opacity));
 }
 
-.hover\:text-\[\#A5A6FF\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(165 166 255 / var(--tw-text-opacity));
+.hover\:bg-dark_blue:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 15 73 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-hoverColor:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 151 45 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#FF972D\]:hover {
@@ -975,9 +1065,14 @@ nav {
   color: rgb(255 151 45 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#b1b6b9\]:hover {
+.hover\:text-dark_blue:hover {
   --tw-text-opacity: 1;
-  color: rgb(177 182 185 / var(--tw-text-opacity));
+  color: rgb(19 15 73 / var(--tw-text-opacity));
+}
+
+.hover\:text-light_purple:hover {
+  --tw-text-opacity: 1;
+  color: rgb(165 166 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -985,21 +1080,68 @@ nav {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 120px) {
-  .\32sm\:ml-0 {
-    margin-left: 0px;
+.hover\:text-hoverColor:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 151 45 / var(--tw-text-opacity));
+}
+
+@media (min-width: 250px) {
+  .\33sm\:mb-\[3px\] {
+    margin-bottom: 3px;
   }
 
+  .\33sm\:w-\[60px\] {
+    width: 60px;
+  }
+
+  .\33sm\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .\33sm\:text-\[25px\] {
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 300px) {
   .\32sm\:hidden {
     display: none;
   }
 
-  .\32sm\:text-\[28px\] {
-    font-size: 28px;
+  .\32sm\:h-\[40px\] {
+    height: 40px;
   }
 
-  .\32sm\:text-\[30px\] {
-    font-size: 30px;
+  .\32sm\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .\32sm\:w-\[130px\] {
+    width: 130px;
+  }
+
+  .\32sm\:w-\[150px\] {
+    width: 150px;
+  }
+
+  .\32sm\:text-\[13px\] {
+    font-size: 13px;
+  }
+
+  .\32sm\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .\32sm\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .\32sm\:text-\[25px\] {
+    font-size: 25px;
+  }
+
+  .\32sm\:text-\[40px\] {
+    font-size: 40px;
   }
 }
 
@@ -1016,8 +1158,8 @@ nav {
     display: none;
   }
 
-  .sm\:h-\[30px\] {
-    height: 30px;
+  .sm\:h-\[40px\] {
+    height: 40px;
   }
 
   .sm\:h-\[50px\] {
@@ -1028,18 +1170,12 @@ nav {
     width: 100%;
   }
 
-  .sm\:w-\[100px\] {
-    width: 100px;
+  .sm\:w-\[150px\] {
+    width: 150px;
   }
 
   .sm\:text-\[50px\] {
     font-size: 50px;
-  }
-}
-
-@media (min-width: 500px) {
-  .\33sm\:text-\[25px\] {
-    font-size: 25px;
   }
 }
 
@@ -1068,6 +1204,10 @@ nav {
   .md\:text-\[30px\] {
     font-size: 30px;
   }
+
+  .md\:text-\[20px\] {
+    font-size: 20px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1079,11 +1219,39 @@ nav {
     display: none;
   }
 
+  .lg\:h-\[700px\] {
+    height: 700px;
+  }
+
+  .lg\:w-\[170px\] {
+    width: 170px;
+  }
+
+  .lg\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .lg\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .lg\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .lg\:text-\[40px\] {
     font-size: 40px;
   }
 
   .lg\:text-\[50px\] {
     font-size: 50px;
+  }
+
+  .lg\:text-\[60px\] {
+    font-size: 60px;
+  }
+
+  .lg\:text-\[25px\] {
+    font-size: 25px;
   }
 }
